# ImageMaker

./: CMakeLists.txt  ImageMaker.cpp  ImageMaker.h  ImageMaker_demo.cpp  README.md  string.ppm
images/: bad_color_max.ppm  bad_height_max.ppm  bad_height_neg.ppm  bad_magic.ppm  bad_pixel_value.ppm  bad_width_max.ppm  bad_width_neg.ppm  blocks.ppm  gradient.ppm  house.ppm  zebra.ppm
test_images/: blocks_copy.ppm  colorsq_test.ppm  house_test.ppm  line1_order_test.ppm  line2_order_test.ppm  readme  rect2_order_test.ppm  save_test.ppm  xy2.ppm  zebra_test.ppm
unit_tests/: DrawLine_tests.cpp  DrawPixel_tests.cpp  DrawRectangle_tests.cpp  ImageMaker_tests.cpp  catch_main.cpp  constructor_tests.cpp  getter_setter_tests.cpp  my_tests.cpp  save_load_tests.cpp  unit_utils.h
